fix(data-migrator): avoid same entities are retried multiple times
related to camunda/camunda-7-to-8-migration-tooling#1015